setting up work flow and build ideas in ReadMe. will be deleted later.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="button">hello</button>
+
+    <div class="test">
+        <p>my name is: <input type="text" id="user-name" value=""></p>
+        <button id="button-one">run</button>
+        <br>
+        <p id="name-save"></p>
+
+        <p>my email is: <input type="text" id="user-email" value=""></p>
+        <button id="button-two">run</button>
+        <br>
+        <p id="email-save"></p>
+    </div>
+    
+
+    
 </body>
 </html>
